# debate-room

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/debate_room/: app.py  crew.py  main.py  progress_tracker.py
src/debate_room/config/: agents.yaml  tasks.yaml
