[project]
name = "debate_room"
version = "0.1.0"
description = "AI-powered formal debate system using CrewAI multi-agent framework"
authors = [{ name = "salvani", email = "5931008+salvani@users.noreply.github.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.0",
    "gradio>=4.0.0",
]

[project.scripts]
debate_room = "debate_room.main:run"
run_crew = "debate_room.main:run"
debate_gui = "debate_room.app:launch"
train = "debate_room.main:train"
replay = "debate_room.main:replay"
test = "debate_room.main:test"
run_with_trigger = "debate_room.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
